--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 # Python 3.7
-# pip install -r requirements.txt
+# pip3 install -r requirements.txt
+# sudo apt-get install postgresql
+# sudo apt-get install python-psycopg2
+# sudo apt-get install libpq-dev
 
-flask==1.1.1
-flask-sqlalchemy==2.4.1
-Flask-WTF==0.14.2
-bcrypt==3.1.7
-psycopg2==2.8.4
+flask
+flask-sqlalchemy
+flask-bcrypt
+Flask-WTF
+bcrypt
 wtforms
 sqlalchemy
+psycopg2
+flask-bcrypt
+flask_login
