--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 # Python 3.7
-# pip3 install -r requirements.txt
+# sudo apt-get update
+# sudo apt-get install python3-pip
 # sudo apt-get install postgresql
 # sudo apt-get install python-psycopg2
 # sudo apt-get install libpq-dev
+# pip3 install -r requirements.txt
 
 flask
 flask-sqlalchemy
